--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Leaflet Template">
   <meta name="viewport" content="initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./img/favicon_io/favicon.ico">
   <title>Tree Cluster Map</title>
 
   <link rel="stylesheet" href="css/style.css">
