--- a/index.html
+++ b/index.html
@@ -18,23 +18,51 @@
   <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
 </head>
 <body>
+
   <nav>
     <div class="w3-bar w3-light-grey">
-        <a href="#home" class="w3-bar-item w3-button">Home</a>
-        <a href="#map" class="w3-bar-item w3-button">Map</a>
+      <a href="#home" class="w3-bar-item w3-button">Home</a>
+      <a href="#map" class="w3-bar-item w3-button">Map</a>
     </div>
   </nav>
-
-  <!--<div id="content"></div>-->
-    <div id="cluster-map"></div>
-</body>
   
+  <div class="row">
+    <div class="col-3">
+
+      <div class="search-bar">
+        <input type="text" class="search-input" id="searchInput" placeholder="Search...">
+        <ul class="search-results" id="searchResults"></ul>
+      </div>
+     
+    </div>
+    <div class="col-9">
+      <div id="cluster-map"></div>
+    </div>
+  </div>
+ 
+  
+
+
+
+
+
+
+
+
+
+ 
+
+ 
+
+</body>
 </html>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script  src="js/map-script.js"></script>
   <script  src="js/router.js"></script>
+  <script  src="js/index-search.js"></script>
+
 
   
 
