Linked searchbar to trees API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
       <div class="search-bar">
         <input type="text" class="search-input" id="searchInput" placeholder="Search...">
-        <ul class="search-results" id="searchResults"></ul>
+        <ul class="search-results" id="searchResults">
+          
+        </ul>
       </div>
      
     </div>
