--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="col-3">
 
       <div class="search-bar">
-        <input type="text" class="search-input" id="searchInput" placeholder="Search...">
+        <input class="form-control form-control-lg"  id="searchInput"  type="text" placeholder="Search">
+      
         <ul class="search-results" id="searchResults">
           
         </ul>
