--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script  src="js/map-script.js"></script>
   <script  src="js/router.js"></script>
-  <script  src="js/index-search.js"></script>
+  <script  src="js/map-search.js"></script>
 
 </html>
