--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./img/favicon_io/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   <title>Tree Cluster Map</title>
 
   <link rel="stylesheet" href="css/style.css">
