replaced card with border on map-search

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="cluster-map"></div>
   <div class="map-search-bar">
     <input class="form-control form-control-lg" type="text" id="searchInput" placeholder="Search...">
-    <ul class="search-results" id="searchResults">
+    <ul class="map-search-results" id="searchResults">
   </div>
 </body>
 
