Added map reset view button

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </div>
   </nav>
   <div id="cluster-map"></div>
+
   <div class="map-search-bar">
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
+    <button id="resetZoomButton">Reset Zoom</button>
     <ul class="map-search-results" id="searchResults">
   </div>
 </body>
