--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <div id="cluster-map"></div>
 
   <div class="map-search-bar">
+    <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
-    <button id="resetZoomButton">Reset Zoom</button>
     <ul class="map-search-results" id="searchResults">
   </div>
 </body>
