Added preload scripts

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
     <ul class="map-search-results" id="searchResults">
+      <div id="preloadContainer"></div>
   </div>
 </body>
 
