Added map-preload scripts

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
     <ul class="map-search-results" id="searchResults">
-      <div class="map-preload"id="preloadContainer"></div>
+      <div class="map-preload">
+        <h1>Preloaded Records</h1>
+        <div id="preloadContainer"></div>
+      </div>
   </div>
 </body>
 
