Minor style changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
     <ul class="map-search-results" id="searchResults">
       <div class="map-preload">
-        <h1>Preloaded Records</h1>
+        <h1>Recent Records</h1>
         <div id="preloadContainer"></div>
       </div>
   </div>
