Map scripts and index changes

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
     </div>
   </nav>
   <div id="cluster-map"></div>
-  <div class="map-preload">
-
-  <h1>Recent Records</h1>
+  <div class="card map-preload">
+    <h1>Recent Records</h1>
     <div id="preloadContainer"></div>
   </div>
-  
+
   <div class="map-search-bar">
     <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
     <input class="form-control form-control-md" type="text" id="searchInput" placeholder="Search Tree Records">
