Minor span changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
   <div id="cluster-map"></div>
   <div class="card map-preload">
-    <h3>Recent Records</h3>
+    <p class="map-recent-records-header">RECENT RECORDS</p>
     <div id="preloadContainer"></div>
   </div>
 
