Changed div to ul preload results

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="cluster-map"></div>
   <div class="card map-preload">
     <p class="map-recent-records-header">RECENT RECORDS</p>
-    <div id="preloadContainer"></div>
+      <ul class="map-search-results" id="preloadContainer"></ul>
   </div>
 
   <div class="map-search-bar">
