--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="map-search-bar">
     <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
-    <input class="form-control" type="text" id="searchInput" placeholder="Search Tree Records">
+    <input class="form-control" type="text" id="searchInputBar" placeholder="Search">
     <ul class="map-search-results" id="searchResults">
   </div>
 </body>
