Minor searchbar styling

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <div id="cluster-map"></div>
   <div class="card map-preload">
     <p class="map-recent-records-header">RECENT RECORDS</p>
-      <ul class="map-search-results" id="recentRecordsContainer"></ul>
+      <div class="map-search-results" id="recentRecordsContainer"></div>
   </div>
-
+  <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
   <div class="map-search-bar">
-    <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
+  
     <input class="form-control" type="text" id="searchInputBar" placeholder="Search">
     <ul class="map-search-results" id="searchResults">
   </div>
