--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
@@ -30,7 +30,14 @@
       <div class="map-search-results" id="recentRecordsContainer"></div>
   </div>
   -->
-  <button class="btn btn-light map-reset-btn" id="resetZoomButton">Reset Zoom</button>
+  <button class="btn btn-light map-reset-btn" id="resetZoomButton">
+    <i class="fas fa-search"></i> Reset
+  </button>
+  
+  <button class="btn btn-light map-toggle-btn" id="toggleButton">
+    <i class="fas fa-toggle-on"></i> Toggle
+  </button>
+
   <div class="map-search-bar">
   
     <input class="form-control" type="text" id="searchInputBar" placeholder="Search">
