Added info button

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
   </div>
   -->
   <button class="btn btn-light map-reset-btn" id="resetZoomButton">
-    <i class="fas fa-search"></i> Reset
+    <i class="fas fa-eye"></i> Reset
   </button>
   
   <button class="btn btn-light map-toggle-btn" id="toggleButton">
     <i class="fas fa-toggle-on"></i> Toggle
+  </button>
+
+  <button class="btn btn-light map-info-btn" id="toggleButton">
+    <i class="fas fa-info"></i><br>Info
   </button>
 
   <div class="map-search-bar">
