Added search button

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
     <i class="fas fa-eye"></i> Reset
   </button>
   
-  <button class="btn btn-light map-toggle-btn" id="toggleButton" data-toggle="modal" data-target="#historyModal">
-    <i class="fas fa-history"></i> History
+  <button class="btn btn-light map-search-btn" id="toggleButton" data-toggle="modal" data-target="">
+    <i class="fas fa-search"></i>Search
+  </button>
+
+  <button class="btn btn-light map-history-btn" id="toggleButton" data-toggle="modal" data-target="#historyModal">
+    <i class="fas fa-history"></i><br>History
   </button>
 
   <button class="btn btn-light map-info-btn" id="toggleButton" data-toggle="modal" data-target="#exampleModalLong">
