Added number of areas and number of trees

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 
 
   <div class="map-search-bar">
-    <div id="treeParkContainer"></div>
-    <div id="totalTreesPlanted"></div>
+    <div id="totalTrees"></div>
   </div>
 </body>
 
