Minor dashboard changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
   <div class="map-search-bar">
-    <div id="totalTrees"></div>
+    <div id="totalTrees" style="text-align:center;"></div>
   </div>
 </body>
 
