Barangay search changes

--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Search Records</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Map Search</h5>
           <i class="fa fa-close" data-dismiss="modal"></i>
         </div>
         <div class="modal-body">
-          
-          <input type="text" class="w3-bar-item w3-input" id="searchInputBar" placeholder="Search..">
+
+          <input type="text" class="w3-bar-item w3-input" id="searchInputBar" placeholder="Search Barangay">
             <ul class="map-search-results" id="searchResults"></ul>
           </input>    
-
 
         </div>
         <div class="modal-footer">
