Added Project Kalasan on info modal

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           <i class="fa fa-close" data-dismiss="modal"></i>
         </div>
         <div class="modal-body">
-         <span>This is an open source project</span>
-
+         <span>Welcome to Project Kalasan: Project Kalasan: Promoting Reforestation Efforts Through the Development of Open Database Cluster Mapping of Endemic Tree Species in Sumilao, Bukidnon.
+          This is an open source project</span>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
