--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-  <title>Tree Cluster Map</title>
+  <title>Project Kalasan</title>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
