Changed map-search into map-dash

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
 
 
-  <div class="map-search-bar">
+  <div class="map-dash-bar">
     <div id="totalTrees" style="text-align:center;"></div>
   </div>
 </body>
