--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <nav>
-    <div class="w3-bar w3-light-grey">
+    <div class="w3-bar w3-teal">
       <a href="#home" class="w3-bar-item w3-button">Home</a>
       <a href="#map" class="w3-bar-item w3-button">Map</a> 
     </div>
